Devops/Docker/docker-01-welcome-to-docker/infrastructure.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This templates creates an ec2 instance with type t2.micro and a security group which
  enables ssh on instance.

Parameters: 
  AmiId:
    Description: chose ami-id
    Type: AWS::EC2::Image::Id 
    Default: ami-0b5eea76982371e91
  vpcID:  
    Description: chose vpc
    Type: AWS::EC2::VPC::Id

  InstanceType:
    Description: chose intance type 
    Type: string 
    Default: t2.micro

Resources:
  dockersecuritygroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enables ssh" # Required
      GroupName: "docker-ssh"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

      VpcId: !Ref vpcID 
  dockerec2instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: xxxxx
      ImageId: !Ref AmiId
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref dockersecuritygroup
      UserData:  !Base64 |
        #!/bin/bash
        yum update -y
        yum install subversion -y
        amazon-linux-extras install docker -y
        systemctl start docker  
        systemctl enable docker  
        usermod -a -G docker ec2-user 
        newgrp docker 
        cd /home/ec2-user
        svn export https://github.com/muskrt/aws-devops-projects.git/trunk/Devops/Docker/docker-01-welcome-to-docker
        sleep 5
        cd docker-01-welcome-to-docker/App
        chmod +x docker-build.sh
        ./docker-build.sh


Outputs:
  intancepublicip:
    Description: instance ip
    Value: !GetAtt  dockerec2instance.PublicIp
